--- a/Resources/Prototypes/_Genesis/Entities/Mobs/Cyborgs/base_borg_chassis.yml
+++ b/Resources/Prototypes/_Genesis/Entities/Mobs/Cyborgs/base_borg_chassis.yml
@@ -1,6 +1,6 @@
 - type: entity
   id: BaseBorgChassisNTs
-  parent: BaseBorgChassis
+  parent: BorgChassisSelectable
   abstract: true
   components:
   - type: NpcFactionMember
