--- a/Resources/Prototypes/Datasets/ion_storm.yml
+++ b/Resources/Prototypes/Datasets/ion_storm.yml
@@ -543,7 +543,7 @@
   - РИФМОВАТЬ
   - ГРОМКО ВОСТОРГАТЬСЯ
   - ПЕРЕКАТЫВАТЬСЯ СО СКОРОСТЬЮ ЗВУКА
-  - ДОБАВЛЯТЬ 'ЭЙ, ПОСЛУШАЙ' В ПРЕДЛОЖЕНИЕ ПРИ ОБЩЕНИИ
+  - ВО ВРЕМЯ ОБЩЕНИЯ ОБЯЗАТЕЛЬНО ВСТАВЛЯЙТЕ ФРАЗУ "ЭЙ ПОСЛУШАЙ"
   - КРИЧАТЬ
   - ВЫКЛЮЧАТЬ ВСЁ
   - СПАТЬ С РЫБАМИ
