--- a/Resources/Maps/marathon.yml
+++ b/Resources/Maps/marathon.yml
@@ -1,6 +1,17 @@
 meta:
-  format: 6
-  postmapinit: false
+  format: 7
+  category: Map
+  engineVersion: 247.2.0
+  forkId: ""
+  forkVersion: ""
+  time: 03/02/2025 15:22:02
+  entityCount: 23194
+maps:
+- 5350
+grids:
+- 30
+orphans: []
+nullspace: []
 tilemap:
   0: Space
   3: FloorArcadeRed
@@ -7590,7 +7601,6 @@ entities:
     - type: MovedGrids
     - type: Broadphase
     - type: OccluderTree
-    - type: LoadedMap
 - proto: AcousticGuitarInstrument
   entities:
   - uid: 525
@@ -53345,13 +53355,6 @@ entities:
     components:
     - type: Transform
       pos: 7.503625,43.354942
-      parent: 30
-- proto: ClothingNeckCloakTrans
-  entities:
-  - uid: 3344
-    components:
-    - type: Transform
-      pos: -56.501534,-67.426544
       parent: 30
 - proto: ClothingNeckHeadphones
   entities:
