--- a/Resources/Maps/omega.yml
+++ b/Resources/Maps/omega.yml
@@ -1,6 +1,17 @@
 meta:
-  format: 6
-  postmapinit: false
+  format: 7
+  category: Map
+  engineVersion: 247.2.0
+  forkId: ""
+  forkVersion: ""
+  time: 03/02/2025 15:22:15
+  entityCount: 13926
+maps:
+- 473
+grids:
+- 4812
+orphans: []
+nullspace: []
 tilemap:
   0: Space
   7: FloorAsteroidSand
@@ -48,7 +59,6 @@ entities:
     - type: MovedGrids
     - type: Broadphase
     - type: OccluderTree
-    - type: LoadedMap
   - uid: 4812
     components:
     - type: MetaData
@@ -33432,13 +33442,6 @@ entities:
     - type: Transform
       pos: 65.5,-25.5
       parent: 4812
-- proto: ClothingNeckCloakTrans
-  entities:
-  - uid: 4827
-    components:
-    - type: Transform
-      pos: 38.546867,-26.403046
-      parent: 4812
 - proto: ClothingNeckHeadphones
   entities:
   - uid: 9196
@@ -33450,20 +33453,6 @@ entities:
     components:
     - type: Transform
       pos: -0.5106895,-15.532991
-      parent: 4812
-- proto: ClothingNeckIntersexPin
-  entities:
-  - uid: 12511
-    components:
-    - type: Transform
-      pos: 19.693497,8.613337
-      parent: 4812
-- proto: ClothingNeckNonBinaryPin
-  entities:
-  - uid: 12513
-    components:
-    - type: Transform
-      pos: 8.410957,-44.59256
       parent: 4812
 - proto: ClothingNeckScarfStripedBlue
   entities:
@@ -33524,13 +33513,6 @@ entities:
     components:
     - type: Transform
       pos: -14.6855755,-0.43132806
-      parent: 4812
-- proto: ClothingNeckTransPin
-  entities:
-  - uid: 12515
-    components:
-    - type: Transform
-      pos: -14.357392,4.331708
       parent: 4812
 - proto: ClothingOuterApron
   entities:
