--- a/Resources/Maps/packed.yml
+++ b/Resources/Maps/packed.yml
@@ -1,6 +1,17 @@
 meta:
-  format: 6
-  postmapinit: false
+  format: 7
+  category: Map
+  engineVersion: 247.2.0
+  forkId: ""
+  forkVersion: ""
+  time: 03/02/2025 15:22:17
+  entityCount: 15475
+maps:
+- 126
+grids:
+- 2
+orphans: []
+nullspace: []
 tilemap:
   0: Space
   3: FloorArcadeRed
@@ -6612,7 +6623,6 @@ entities:
     - type: MovedGrids
     - type: Broadphase
     - type: OccluderTree
-    - type: LoadedMap
 - proto: AccordionInstrument
   entities:
   - uid: 13494
@@ -39081,18 +39091,6 @@ entities:
     components:
     - type: Transform
       pos: 17.479858,8.394902
-      parent: 2
-- proto: ClothingNeckCloakTrans
-  entities:
-  - uid: 688
-    components:
-    - type: Transform
-      pos: 7.491953,-13.240216
-      parent: 2
-  - uid: 7009
-    components:
-    - type: Transform
-      pos: 19.545155,5.62142
       parent: 2
 - proto: ClothingNeckScarfStripedRed
   entities:
