--- a/Resources/Prototypes/_Genesis/Entities/Clothing/Head/modsuithead.yml
+++ b/Resources/Prototypes/_Genesis/Entities/Clothing/Head/modsuithead.yml
@@ -1,5 +1,5 @@
 - type: entity
-  parent: ClothingHeadSuitWithLightBase
+  parent: [ ClothingHeadHardsuitBase, ClothingHeadSuitWithLightBase ]
   id: ClothingHeadHelmetModsuitBase
   abstract: true
   name: base MOD helmet
